--- a/pages/sureStep/sureStep.html
+++ b/pages/sureStep/sureStep.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../sureStep/css/sureStep.css">
-    <script src="/pages/sureStep/js/sureStep.js"></script>
+    <script src="js/sureStep.js"></script>
 
 </head>
 
@@ -26,90 +26,191 @@
         <div class="collapse navbar-collapse justify-content-around" id="navbarNavDropdown" style="flex-grow: 0;">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../index.html">Main Page</a>
+                    <a class="nav-link" href="../../../../index.html">Main Page</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../pages/price/price.html">Dock Packages and Pricing</a>
+                    <a class="nav-link" href="../price/price.html">Dock Packages and Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../pages/contact/contact.html">Contact Us</a>
+                    <a class="nav-link" href="../contact/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="../../pages/otherProducts/otherProducts.html">Other Products</a>
-                        <a class="dropdown-item" href="../../pages/sureStep/sureStep.html">Sure Steps</a>
-                        <a class="dropdown-item" href="../../pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
-                        <a class="dropdown-item" href="../../pages/warranty/warranty.html">Warranty</a>
-                        <a class="dropdown-item" href="/pages/testimonialFeedback../../testimonialFeedback.html">Testimonials and Feedback</a>
+                        <a class="dropdown-item" href="../sureStep/sureStep.html">Sure-Step</a>
+                        <a class="dropdown-item" href="../partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
+                        <a class="dropdown-item" onclick="warranty()">Warranty</a>
+                        <a class="dropdown-item" href="../testimonialFeedback/testimonialFeedback.html">Testimonials and Feedback</a>
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
 
+    <!--Warranty Pop-up-->
+    <div id="surround" onclick="surround()">
+        <div id="warranty">
+            <h2>Warranty</h2>
+            <div id="warrantyText">
+                E-Z Docking Solutions LLC warranties all E-Z Docking Solutions brand docks purchased new by the original owner to be free from defects in the aluminum structure and welds for a period of 15 years. E-Z Docking Solutions LLC will at its option, repair or replace, without charge, or allow credit for any such goods found on examination by E-Z Docking Solutions to be defective under normal use and service, provided E-Z Docking Solutions is promptly notified in writing upon discovery of such defects. The buyers remedies with respect to defective goods shall be exclusively limited as provided above, and in no event shall E-Z Docking Solutions be liable for incidental or consequential damages of any nature. All repair work must be done by E-Z Docking Solutions. This warranty does not cover damage caused by improper use, installation, removal, overloading accident, neglect or harmful alterations or repairs made by others, damage by snow or ice, fallen trees, boat collisions, electrolysis, severe weather conditions, acts of war, and all acts of God.
+            </div>
+            <h3>E-Z Docking Solutions, LLC</h3>
+            <p>Kayak Launching Dock/Stairs/Gangways/Other Products</p>
+        </div>
+    </div>
+
+
     <!--Main Content-->
     <div id="mainContent">
-        <div id="header">
+
+        <!--Welcome Section-->
+        <div id="welcome">
 
             <div id="imageHolder">
-                <img src="./img/headrer.jpeg" alt="Background for the Main Dock Image">
+                <img src="img/steps.jpg" alt="Dock Steps">
             </div>
 
             <div id="welcomeText">
                 <h1>E-Z Docking Solutions</h1>
                 <p>Check out our NEW Kayak Launch Dock in Other Products!!!</p>
             </div>
-        </div>
 
-        <div id="content">
-            <h2><strong>AVAILABLE IN GREY OR SAND</strong></h2>
-
-            <div id="contentBottom">
-
-                <img src="/pages/sureStep/img/one.jpg" alt="" id="main">
-                <p>Sure-step is one of the best decking options available today! It is lightweight, durable, wave resistant, highly UV resistant so it does not get hot, slip resistant, environmentally friendly, and barefoot friendly. It is made of 100% Virgin Polypropylene. It is very lightweight making for easy installation and removal, yet it is very rugged and rated for 350 pounds per square foot.</p>
-                <img src="http://www.nhdocks.com/nhdocks/decking_surestep_procell_001.jpg" alt="" id="extraImg">
-
+            <div id="intro">
+                <h2>Sure-Step</h2>
             </div>
         </div>
 
 
-
-
-        <!--Footer-->
-        <div id="footer">
-            <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
-                <div class="card-body">
-                    <h5 class="card-title">Copyright</h5>
-                    <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
-                    <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
+        <!--Package1 Section-->
+        <div id="Package1" class="Package">
+            <div class="box">
+                <div id="Package1Img" class="packageImg">
+                    <img src="img/graySand.jpeg" alt="Gray and Sand colored dock steps">
                 </div>
-            </div>
-            <div class="card" style="width: 20rem; border: none; background-color: rgb(235, 235, 235)">
-                <div class="card-body">
-                    <h5 class="card-title">Contact</h5>
-                    <p class="card-text">ph: (603) 942-7355</p>
-                    <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
-                <div class="card-body">
-                    <h5 class="card-title">Address</h5>
-                    <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
+                <div id="Package1Text" class="packageText">
+                    <div>
+                        <h3>AVAILABLE IN GREY OR SAND</h3>
+                        <p>Sure-step is one of the best decking options available today! It is lightweight, durable, wave resistant, highly UV resistant so it does not get hot, slip resistant, environmentally friendly, and barefoot friendly. It is made of 100% Virgin Polypropylene. It is very lightweight making for easy installation and removal, yet it is very rugged and rated for 350 pounds per square foot.</p>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <!--Package2 Section-->
+        <div id="Package2" class="Package">
+            <div class="box">
+                <div id="Package2Img" class="packageImg">
+                    <img src="img/floatingDocks.jpg" alt="floating Docks">
+                </div>
+                <div id="Package2Text" class="packageText">
+                    <div>
+                        <h3><b style="color:red;">**NEW**</b> Kayak Launching Platform Dock Attachment</h3>
+                        <p>These new kayak launching platforms are made using two 3' x 10' Sure-step sections using smaller 8" floats with adjustable grab railing and cradle bars underneath for the kayak. Price is $3,500 with assembly unit to attach to the side of your dock.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Package3 Section-->
+        <div id="Package3" class="Package">
+            <div class="box">
+                <div id="Package3Img" class="packageImg">
+                    <img src="img/gangways.jpg" alt="floating Docks">
+                </div>
+                <div id="Package3Text" class="packageText">
+                    <div>
+                        <h3>Gangways</h3>
+                        <p>Gangways are typically 3' or 4' wide and are made in a single piece to accommodate your desired length. Handrails can be added on one or both sides priced at $25 per foot.</p>
+                        <p>Please <a href="http://nhdocks.com/contact_us">contact us</a> for exact pricing.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Package4 Section-->
+        <div id="Package4" class="Package">
+            <div class="box">
+                <div id="Package4Img" class="packageImg">
+                    <img src="img/stairs.jpeg" alt="floating Docks">
+                </div>
+                <div id="Package3Text" class="packageText">
+                    <div>
+                        <h3>3' Wide Sure-step Stairs</h3>
+                        <p>Dock steps are $125 per step</p>
+                        <p>Each handrail is $75 for 3-step stairs ($25 per step)
+                            <br>
+                            Stairs have an 8" rise and a 12" run with leveling feet
+                            <br>
+                            Standard dock stairs are 3-step stairs with handrail $450
+                            <br>
+                            To get an accurate step count, please measure from the top of the dock to the lake bottom.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Package4 Section-->
+        <div id="Package5" class="Package">
+            <div class="box">
+                <div id="Package5Img" class="packageImg" style="display: flex;flex-wrap: wrap;justify-content: space-around;">
+                    <img src="img/stair1.jpg" alt="stair1" style="width:30%;">
+                    <img src="img/stair2.jpg" alt="stair2" style="width:30%;">
+                    <img src="img/stair3.jpg" alt="stair3" style="width:30%;">
+                </div>
+            </div>
+        </div>
+
+        <!--Package4 Section-->
+        <div id="Package6" class="Package">
+            <h2>Platforms/Decks</h2>
+            <div class="box">
+                <div id="Package6Img" class="packageImg">
+                    <img src="img/platform.jpg" alt="Platform">
+                </div>
+                <div>
+                    <p>Please <a href="http://nhdocks.com/contact_us">contact us</a> for exact pricing.</p>
+                </div>
+            </div>
+        </div>
+
+
+
+
     </div>
+
+    <!--Footer-->
+    <div id="footer">
+        <div class="card" style="width: 18rem; border: none; background-color: inherit">
+            <div class="card-body">
+                <h5 class="card-title">Copyright</h5>
+                <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
+                <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
+            </div>
+        </div>
+        <div class="card" style="width: 20rem; border: none; background-color: inherit">
+            <div class="card-body">
+                <h5 class="card-title">Contact</h5>
+                <p class="card-text">ph: (603) 942-7355</p>
+                <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem; border: none; background-color: inherit">
+            <div class="card-body">
+                <h5 class="card-title">Address</h5>
+                <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
