--- a/pages/price/price.html
+++ b/pages/price/price.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse justify-content-around" id="navbarNavDropdown" style="flex-grow: 0;">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../../index.html">Main Page</a>
+                    <a class="nav-link" href="../../index.html">Main Page</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
